Handle blobs better Tweak plan service